# services/plumber/src/controllers/projectsprojectIdplanProposalsplanProposalIdstatusController.js
@@ -1,6 +1,0 @@
-const service = require('../services/projectsprojectIdplanProposalsplanProposalIdstatusService.js');
-
-module.exports.getPlanProposalStatus = function getPlanProposalStatus(req, res) {
-    service.getPlanProposalStatus(req, res);
-}
-
